<resources>
    <string name="app_name">MovieEvent</string>
    <string name="event_title">Event Title</string>
    <string name="event_venue">Event Venue</string>
    <string name="event_location">Event Location</string>
    <string name="event_start_date">Event Start Date</string>
    <string name="event_end_date">Event End Date</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="title">Title:</string>
    <string name="venue">Venue:</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="sun">Sun</string>
    <string name="add_contact">Add Contact</string>
    <string name="choose_movie">Choose Movie</string>
    <string name="add_attendees">Add Attendees</string>
    <string name="no_movie_chosen">No Movie Chosen</string>
    <string name="no_attendees">No Attendees</string>
    <string name="no_events">No Events</string>
    <string name="start_time">Start Time</string>
    <string name="start_date">Start Date</string>
    <string name="end_time">End Time</string>
    <string name="end_date">End Date</string>
    <string name="location">Location</string>
    <string name="start_time2">Start Time</string>
    <string name="start_date2">Start Date</string>
    <string name="save2">Save</string>
    <string name="phone_number">phone number</string>
    <string name="name">name</string>
    <string name="movie_title">movie title</string>
    <string name="movie_year">movie year</string>
    <string name="start_time_tag">startTimeTag</string>
    <string name="end_time_tag">endTimeTag</string>
    <string name="start_date_tag">startDateTag</string>
    <string name="end_date_tag">endDateTag</string>
    <string name="add_start_time_tag">addStartTimeTag</string>
    <string name="add_end_time_tag">addEndTimeTag</string>
    <string name="add_start_date_tag">addStartDateTag</string>
    <string name="add_end_date_tag">addEndDateTag</string>
    <string name="delete_entry">Delete entry</string>
    <string name="delete_message">Are you sure you want to delete?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="event_list">Event List</string>
    <string name="calendar">Calendar</string>
    <string name="sort_event">Sort Event</string>
    <string name="add_event">Add Event</string>
    <string name="map">Map</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_location_permission">Location Permission Request</string>
    <string name="text_location_permission">Tap OK to enable GPS settings</string>
    <string name="ok">OK</string>
</resources>
