<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/setting"
        android:title="setting"
        android:icon="@drawable/setting"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/sort"
        android:title="@string/sort_event"
        android:icon="@drawable/sort"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/layout_list"
        android:title="@string/event_list"
        android:icon="@drawable/list"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/layout_calendar"
        android:title="@string/calendar"
        android:icon="@drawable/calendar"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/layout_maps"
        android:title="maps"
        android:icon="@drawable/calendar"
        app:showAsAction="ifRoom"/>

</menu>